# QtWebKitBridgeTemplate

./: .gitignore  CMakeLists.txt  js_widget.cpp  js_widget.h  js_widget.qrc  test.cpp
web/: widget.html  widget.js
